fix/fix for cloud controller api integration
