# libs/nest/cloud/src/lib/controllers/models/heating-preferences/set-automatic-heatin-request.ts
@@ -1,0 +1,8 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty } from 'class-validator';
+
+export class SetAutomaticHeatingRequest {
+  @ApiProperty({nullable: false})
+  @IsNotEmpty()
+  public isAutomaticHeating!: boolean;
+}
